crates/vize_atelier_core/src/snapshots/vize_atelier_core__test_macros__tests__assert_codegen_element.snap
---
source: crates/vize_atelier_core/src/test_macros.rs
expression: result.code.as_str()
---
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, "hello"))
}
